--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -16,9 +16,12 @@ spec:
     spec:
       containers:
       - name: microservice
-        image: gcr.io/project-backup-308223/microservice:7790681
+        image: gcr.io/project-backup-308223/microservice:ca899b1
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            cpu: "250m"
 ---
 kind: Service
 apiVersion: v1
