Deploying image gcr.io/project-backup-308223/microservice:f57de4b Built from commit f57de4b050d7fb6c2605d3d190c7013e90f30565 of repository devopsenv branch master Author: root <580009990082@cloudbuild.gserviceaccount.com>

--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: microservice
-        image: gcr.io/project-backup-308223/microservice:ca899b1
+        image: gcr.io/project-backup-308223/microservice:f57de4b
         ports:
         - containerPort: 8080
         resources:
@@ -35,3 +35,16 @@ spec:
     port: 80
     targetPort: 8080
   type: LoadBalancer
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: microservice
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: microservice
+  minReplicas: 1
+  maxReplicas: 4
+  targetCPUUtilizationPercentage: 50
