--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -16,10 +16,12 @@ spec:
     spec:
       containers:
       - name: microservice
-        image: gcr.io/project-backup-308223/microservice:2b4fd6f
+        image: gcr.io/project-backup-308223/microservice:d1c39f1
         ports:
         - containerPort: 8080
-
+        resources:
+          requests:
+            cpu: "250m"
 ---
 kind: Service
 apiVersion: v1
@@ -33,3 +35,16 @@ spec:
     port: 80
     targetPort: 8080
   type: LoadBalancer
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: microservice
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: microservice
+  minReplicas: 1
+  maxReplicas: 4
+  targetCPUUtilizationPercentage: 50
