--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -16,12 +16,16 @@ spec:
     spec:
       containers:
       - name: microservice
-        image: gcr.io/project-backup-308223/microservice:5919058
+        image: gcr.io/project-backup-308223/microservice:04f650c
         ports:
         - containerPort: 8080
         resources:
-          requests:
+          limits:
+            memory: "512Mi"
             cpu: "250m"
+          requests:
+            cpu: "150m"
+            memory: "256Mi"
 ---
 kind: Service
 apiVersion: v1
@@ -46,5 +50,5 @@ spec:
     kind: Deployment
     name: microservice
   minReplicas: 1
-  maxReplicas: 4
-  targetCPUUtilizationPercentage: 50
+  maxReplicas: 3
+  targetCPUUtilizationPercentage: 90
